--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,10 +8,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity android:name=".SplashScreen"
-            android:screenOrientation="portrait"
-            android:noHistory="true">
+        <activity
+            android:name=".SplashScreen"
+            android:noHistory="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,8 +20,9 @@
         </activity>
         <activity android:name=".Fill_Parent_Wrap_Content_Activity" />
         <activity android:name=".Linear_Layout" />
-        <activity android:name=".MainActivity"/>
-
+        <activity android:name=".MainActivity" />
+        <activity android:name=".Relative_Layout" />
+        <activity android:name=".TableLayout"></activity>
     </application>
 
 </manifest>
